# neural-renderer

./: .gitmodules  CMakeLists.txt  PROJECT.md  README.md
cmake/: embed_ptx.cmake
src/: bvh_data.h  compare_images.cu  config_loader.cpp  config_loader.h  cuda_renderer_neural.cu  cuda_renderer_neural.h  denoiser.cuh  disney_brdf.cuh  evaluate.cu  hit_info.h  image_utils.h  input_controller.cpp  input_controller.h  main.cu  main_compare_images.cu  main_comparison.cu  main_psnr.cu  material.h  mesh.cu  mesh.h  mesh_bvh.cpp  mesh_intersection.cuh  mesh_loader.cpp  mesh_loader.h  mesh_traversal.cuh  neural_debug_points.cuh  point_query.cuh  ray.h  render_params.h  renderer.h  scene.cu  scene.h  tinygltf.cpp  triangle.h  vec3.h  viewer.cu
src/rt/: optix_launch_params.h  optix_programs.cu  optix_state.cu  optix_state.h
